--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,18 @@
   text-align: center;
 }
 
+.issue-list{
+  /* display: flex; 
+  flex-direction: column;
+  align-content: center;
+  justify-content: center; */
+
+}
+
+.issue-card{
+  width: 60vw;
+  text-align: left;
+  margin: 0 auto;
+  border: 1px solid black;
+  padding: 1rem;
+}
