--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,37 @@
-.main {
-  text-align: center;
+body {
+  background-color: #1A181B;
+  color: white;
 }
 
-.issue-list{
-  /* display: flex; 
-  flex-direction: column;
-  align-content: center;
-  justify-content: center; */
-
+.main {
+  text-align: left;
 }
 
 .issue-card{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   width: 60vw;
-  text-align: left;
   margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border: 1px solid rgb(112, 112, 112);
+  word-wrap:break-word;
+  box-shadow: 1rem;
+  transition: .5s;
+}
+
+.issue-card-head{
+  display:flex;
+  justify-content: space-evenly;
   border: 1px solid black;
-  padding: 1rem;
+  color: #3E8989;
+}
+
+.issue-card:hover{
+  background-color:rgb(68, 60, 82);
+}
+
+.nav {
+  border-bottom: 1px solid grey;
+
+  margin: 1rem 1rem 1rem 1rem;
 }
