--- a/src/App.css
+++ b/src/App.css
@@ -22,16 +22,20 @@ body {
 .issue-card-head{
   display:flex;
   justify-content: space-evenly;
-  border: 1px solid black;
-  color: #3E8989;
+  align-items: center;
+  border: 1px solid rgb(114, 114, 114);
 }
 
 .issue-card:hover{
-  background-color:rgb(68, 60, 82);
+  background-color:rgb(51, 51, 51);
 }
 
 .nav {
-  border-bottom: 1px solid grey;
-
+  border-bottom: 1px solid rgb(90, 90, 90);
+  font-size: 2rem;
   margin: 1rem 1rem 1rem 1rem;
+}
+
+.highlight {
+  color: rgb(21, 201, 162);
 }
