--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #1A181B;
+  background-color: #1a181b;
   color: white;
 }
 
@@ -7,33 +7,37 @@ body {
   text-align: left;
 }
 
-.issue-card{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.issue-card {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   width: 60vw;
-  margin: 0 auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  margin: 2rem auto 2rem;
+  padding: 0rem 1rem 0rem 1rem;
   border: 1px solid rgb(112, 112, 112);
-  word-wrap:break-word;
-  box-shadow: 1rem;
-  transition: .5s;
+  word-wrap: break-word;
+  transition: 0.5s;
 }
 
-.issue-card-head{
-  display:flex;
+.issue-card-head {
+  display: flex;
   justify-content: space-evenly;
   align-items: center;
   border: 1px solid rgb(114, 114, 114);
+  margin-bottom: 1rem;
 }
 
-.issue-card:hover{
-  background-color:rgb(51, 51, 51);
+.issue-card:hover {
+  background-color: rgb(51, 51, 51);
 }
 
 .nav {
   border-bottom: 1px solid rgb(90, 90, 90);
   font-size: 2rem;
-  margin: 1rem 1rem 1rem 1rem;
+  margin: 1rem 0rem 0.5rem 0rem;
+}
+
+.site-header {
+  margin: 0rem 0rem 1rem 1rem;
 }
 
 .highlight {
